<resources>
    <string name="app_name">TicTacToe</string>
    <string name="txt_empty_cell">Empty Cell</string>
    <string name="Player1">Player 1</string>
    <string name="Player2">Player 2</string>
    <string name="title">TicTacToe</string>
    <string name="multiPlayerOnDevice">Device MultiPlayer</string>
    <string name="hostBluetooth">Host Game</string>
    <string name="joinBluetooth">Join Game</string>
    <string name="stats">Stats</string>
    <string name="name_hint">Type your name here</string>
    <string name="user_name_label">Type your name and press start!</string>
    <string name="scan_btn">Scan devices again</string>
    <string name="scanTxt">Scanning devices ...</string>
    <string name="connectTxt">Connecting ...</string>
    <string name="deviceTxt">Devices</string>
    <string name="toolbarTitle">Devices</string>
    <string name="scan">SCAN</string>
    <string name="waitingToConnect">Waiting for Opponent to connect...</string>
    <string name="connection_fail_message">Device is disconnected. Please connect and restart the game.</string>
    <string name="connection_fail_title">Oops...</string>
    <string name="ok">OK</string>
    <string name="location_reject_title">ARE YOU SURE???</string>
    <string name="location_reject_message">To play our awesome TicTacToe we need your location permission.  Let me give you one more chance!</string>
    <string name="no_thanks">NO THANKS</string>
    <string name="game_player_1_won">Congratulations Player 1, you won!</string>
    <string name="game_player_2_won">Congratulations Player 2, you won!</string>
    <string name="game_draw">It is a draw, try again to see who is better ;)</string>
    <string name="result">Result</string>
    <string name="play_again">Play Again</string>
    <string name="exit">Exit</string>
</resources>
