<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameActivity">

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/gridLayout4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:background="@android:color/black"
        android:fitsSystemWindows="true"
        android:padding="2dp"
        app:columnCount="3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:rowCount="3">

        <ImageView
            android:id="@+id/position_0_0"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="2dp"
            android:background="@android:color/white"
            android:contentDescription="@string/txt_empty_cell"
            android:tag="0" />

        <ImageView
            android:id="@+id/position_0_1"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="2dp"
            android:background="@android:color/white"
            android:contentDescription="@string/txt_empty_cell"
            android:tag="1" />

        <ImageView
            android:id="@+id/position_0_2"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="2dp"
            android:background="@android:color/white"
            android:contentDescription="@string/txt_empty_cell"
            android:tag="2" />

        <ImageView
            android:id="@+id/position_1_0"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="2dp"
            android:background="@android:color/white"
            android:contentDescription="@string/txt_empty_cell"
            android:tag="3" />

        <ImageView
            android:id="@+id/position_1_1"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="2dp"
            android:background="@android:color/white"
            android:contentDescription="@string/txt_empty_cell"
            android:tag="4" />

        <ImageView
            android:id="@+id/position_1_2"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="2dp"
            android:background="@android:color/white"
            android:contentDescription="@string/txt_empty_cell"
            android:tag="5" />

        <ImageView
            android:id="@+id/position_2_0"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="2dp"
            android:background="@android:color/white"
            android:contentDescription="@string/txt_empty_cell"
            android:tag="6" />

        <ImageView
            android:id="@+id/position_2_1"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="2dp"
            android:background="@android:color/white"
            android:contentDescription="@string/txt_empty_cell"
            android:tag="7" />

        <ImageView
            android:id="@+id/position_2_2"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="2dp"
            android:background="@android:color/white"
            android:contentDescription="@string/txt_empty_cell"
            android:tag="8" />

    </androidx.gridlayout.widget.GridLayout>

    <TextView
        android:id="@+id/txtView_Player1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/Player1"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:textColor="@android:color/black" />

    <TextView
        android:id="@+id/txtView_Player12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/Player2"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/player2Symbol"
        app:layout_constraintTop_toTopOf="parent"
        tools:textColor="@android:color/black" />

    <ImageView
        android:id="@+id/player1Symbol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/img_view_border"
        app:layout_constraintStart_toEndOf="@+id/txtView_Player1"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_x" />

    <ImageView
        android:id="@+id/player2Symbol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/img_view_border"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_o" />

    <TextView
        android:id="@+id/player1score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="0"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/player1moveindicator"
        app:layout_constraintTop_toBottomOf="@+id/txtView_Player1" />

    <TextView
        android:id="@+id/player2score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="0"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/player2moveindicator"
        app:layout_constraintTop_toBottomOf="@+id/txtView_Player12" />

    <Button
        android:id="@+id/player2moveindicator"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/player2score" />

    <Button
        android:id="@+id/player1moveindicator"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/player1score" />

    <ProgressBar
        android:id="@+id/waitingProgressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="272dp"
        android:layout_marginEnd="8dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/waitingTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/waitingToConnect"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/waitingProgressBar"
        app:layout_constraintStart_toStartOf="@+id/waitingProgressBar"
        app:layout_constraintTop_toBottomOf="@+id/waitingProgressBar" />


</androidx.constraintlayout.widget.ConstraintLayout>